--- a/PlatziVideo/package.json
+++ b/PlatziVideo/package.json
@@ -15,6 +15,7 @@
         "css-loader": "^3.4.2",
         "mini-css-extract-plugin": "^0.9.0",
         "node-sass": "^4.13.1",
+        "prop-types": "^15.7.2",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "sass-loader": "^8.0.2"
